# Tape-sort

./: .gitignore  CMakeLists.txt  README.md  tape_config.txt
lib/tape/: CMakeLists.txt
lib/tape/include/: file_tape.hpp  itape.hpp
lib/tape/src/: file_tape.cpp  itape.cpp
lib/tape/test/: CMakeLists.txt  tape_tests.cpp
lib/tape/test/conf/: fast.txt  illegal.txt  middle.txt  slow.txt
lib/tape/test/data/: four_numbers.tp  one_number.tp
src/: main.cpp
test_data/: 10_3_2_17_12_1.tp  2_1_8_4_3_2.tp
